<resources>
    <string name="app_name">Demo</string>
    <string name="spinner">spinner</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="charactor_id">人物id</string>
    <string name="path">图片路径</string>
    <string name="name">人物姓名</string>
    <string name="id">id</string>
    <string name="btn_request">请求</string>
    <string name="tv_name">用户名</string>
    <string name="tv_pwd">密码</string>
    <string name="btn_login">登录</string>
</resources>