<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvcdemo.controller.MVCActivity">

    <EditText
        android:id="@+id/et_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/charactor_id"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_id"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/charactor_id"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_path_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/path"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_path"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/path"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_name_hint"
        app:layout_constraintEnd_toEndOf="@+id/et_id"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_hint"
        app:layout_constraintEnd_toEndOf="@+id/et_id"
        app:layout_constraintStart_toStartOf="@+id/et_id"
        app:layout_constraintTop_toTopOf="@+id/tv_name_hint" />

    <TextView
        android:id="@+id/tv_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_path_hint" />

    <Button
        android:id="@+id/btn_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_request"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

</androidx.constraintlayout.widget.ConstraintLayout>